as you can see, 
i changed this page

difference between
singleplayer and sanbox
--------------------
added Kerit and KeritMine
--------------------------
added Barracks for aliens
changed hotkeys
----------------------------
added ThornTower
changed Rug
--------------------------
changed size-system
 (maby there are some wrong lenghts)
-------------------------
added Rug and Ruglings
added costs (not finished)
-------------------
nerfed Ticul
-----------------
added Ker
---------------------------
added Armor and Pirce (werte noch aendern)
--------------------
added Arol with splashattack
-------------
added potatoes,
  lots of potatoes
  
added a pause function on 'p'

singelplayermode is now OP (added godeye and godhand)