@@ -3,31 +3,31 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="data"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/core.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/G4P.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/gluegen-rt.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/gluegen-rt-natives-linux-amd64.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/gluegen-rt-natives-linux-armv6hf.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/gluegen-rt-natives-linux-i586.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/gluegen-rt-natives-macosx-universal.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/gluegen-rt-natives-windows-amd64.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/gluegen-rt-natives-windows-i586.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/jl1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/jogl-all.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/jogl-all-natives-linux-amd64.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/jogl-all-natives-linux-armv6hf.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/jogl-all-natives-linux-i586.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/jogl-all-natives-macosx-universal.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/jogl-all-natives-windows-amd64.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/jogl-all-natives-windows-i586.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/jsminim.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/jssc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/minim.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/mp3spi1.9.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/net.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/Path_Finder.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/serial.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/tritonus_aos.jar"/>
-	<classpathentry kind="lib" path="C:/Users/JohannesHinze/Documents/Strategiespiel/Code/libraries/tritonus_share.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/core.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/G4P.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/gluegen-rt.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/gluegen-rt-natives-linux-amd64.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/gluegen-rt-natives-linux-armv6hf.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/gluegen-rt-natives-linux-i586.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/gluegen-rt-natives-macosx-universal.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/gluegen-rt-natives-windows-amd64.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/gluegen-rt-natives-windows-i586.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/jl1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/jogl-all.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/jogl-all-natives-linux-amd64.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/jogl-all-natives-linux-armv6hf.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/jogl-all-natives-linux-i586.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/jogl-all-natives-macosx-universal.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/jogl-all-natives-windows-amd64.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/jogl-all-natives-windows-i586.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/jsminim.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/jssc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/minim.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/mp3spi1.9.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/net.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/Path_Finder.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/serial.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/tritonus_aos.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benjamin/workspace/libraries/tritonus_share.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
