@@ -37,8 +37,8 @@ public class AlienKasernePrunam extends Building implements Buildable,
 
 		animation = nextAnimation = build;
 		// ************************************
-		xSize = 60;
-		ySize = 60;
+		xSize = 50;
+		ySize = 50;
 
 		kerit = 1200;
 		build.setBuildTime(10000);
@@ -46,7 +46,7 @@ public class AlienKasernePrunam extends Building implements Buildable,
 		sight = 50;
 
 		hp = hp_max = 1000;
-		radius = 15;
+		radius = 10;
 
 		commanderRange = 250;
 		// ************************************
